--- a/ASSETS/Sass/_layout.scss
+++ b/ASSETS/Sass/_layout.scss
@@ -93,6 +93,11 @@ footer{
         margin: 0  5px 0 5px;
         
     }
-    
+    .aboutLinks{
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 20px;
+    }
 
   }
