--- a/ASSETS/Sass/main.css
+++ b/ASSETS/Sass/main.css
@@ -92,6 +92,12 @@ footer .about {
   padding: 20px;
   margin: 0 5px 0 5px;
 }
+footer .aboutLinks {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px;
+}
 
 header .nav a {
   display: inline-block;
@@ -1062,7 +1068,7 @@ footer .about .about__portade .about__title {
   font-size: 20px;
 }
 footer .about .about__portade .about__img {
-  height: 540px;
+  height: 520px;
   background-image: url(https://www.excelsiorcalifornia.com/wp-content/uploads/migration/2011/201101/lfe6b7-lfe6aypanda3.jpg?w=879);
   background-size: cover;
   background-position: center 4%;
@@ -1090,6 +1096,7 @@ footer .about .about__portade .about__img p {
   line-height: 25px;
   display: -webkit-box;
   -webkit-line-clamp: 3; /* Limita a 3 líneas (ajústalo según tus necesidades) */
+  line-clamp: 3;
   -webkit-box-orient: vertical; /* Orientación vertical */
   overflow: hidden; /* Oculta el desbordamiento */
 }
@@ -1149,4 +1156,55 @@ footer .about .articlesPromotion .articlesPromotion__content .promotion .promoti
   position: relative;
   bottom: 13px;
   right: 10px;
+}
+footer .about .aboutLinks h2 {
+  color: #fff;
+  font-size: 1rem;
+}
+footer .about .aboutLinks ul {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  list-style-type: none;
+  padding: 0;
+  justify-content: flex-start;
+}
+footer .about .aboutLinks a {
+  color: #c0c0c0;
+  text-decoration: none;
+  text-wrap: wrap;
+}
+footer .about .aboutLinks a i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer .about .aboutLinks a img {
+  width: 20px;
+}
+footer .about .aboutLinks a:hover {
+  text-decoration: underline;
+  color: #fff;
+}
+footer .about .aboutLinks .social-media {
+  margin-top: 20px;
+  display: flex;
+  gap: 10px;
+}
+footer .about .aboutLinks .social-media a {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: rgb(51, 51, 51);
+  color: black;
+  text-align: center;
+  line-height: 30px;
+  /* transition: background-color 0.3s;*/
+  justify-content: center;
+  align-items: center;
+  padding: 3px;
+}
+footer .about .aboutLinks .social-media a:hover {
+  background-color: #686868;
 }/*# sourceMappingURL=main.css.map */
