--- a/ASSETS/Sass/_base.scss
+++ b/ASSETS/Sass/_base.scss
@@ -109,3 +109,23 @@ $circleRadius: 30px ;
     
 }
 
+@mixin footerLastLinks{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    li {
+        margin: 0 10px;
+    }
+    a {
+        color: #b3b3b3;
+        text-decoration: none;
+    }
+    a:hover {
+        text-decoration: underline;
+        text-decoration: none;
+        color: $whiteLight;
+    }
+}
+
