--- a/ASSETS/Sass/main.css
+++ b/ASSETS/Sass/main.css
@@ -98,6 +98,22 @@ footer .aboutLinks {
   align-items: flex-start;
   padding: 20px;
 }
+footer hr {
+  width: 95%;
+  border: 0.1px solid rgba(192, 192, 192, 0.1);
+}
+footer .lastLinks {
+  padding-top: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: baseline;
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 0.8rem;
+  height: 100px;
+}
 
 header .nav a {
   display: inline-block;
@@ -1186,12 +1202,12 @@ footer .about .aboutLinks a:hover {
   text-decoration: underline;
   color: #fff;
 }
-footer .about .aboutLinks .social-media {
+footer .about .aboutLinks .social__media {
   margin-top: 20px;
   display: flex;
   gap: 10px;
 }
-footer .about .aboutLinks .social-media a {
+footer .about .aboutLinks .social__media a {
   display: flex;
   width: 30px;
   height: 30px;
@@ -1205,6 +1221,28 @@ footer .about .aboutLinks .social-media a {
   align-items: center;
   padding: 3px;
 }
-footer .about .aboutLinks .social-media a:hover {
+footer .about .aboutLinks .social__media a:hover {
   background-color: #686868;
+}
+footer .about .lastLinks .footer__links {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+footer .about .lastLinks .footer__links li {
+  margin: 0 10px;
+}
+footer .about .lastLinks .footer__links a {
+  color: #b3b3b3;
+  text-decoration: none;
+}
+footer .about .lastLinks .footer__links a:hover {
+  text-decoration: underline;
+  text-decoration: none;
+  color: #fff;
+}
+footer .about .lastLinks .copyright {
+  margin-left: 170px;
 }/*# sourceMappingURL=main.css.map */
