--- a/ASSETS/Sass/_layout.scss
+++ b/ASSETS/Sass/_layout.scss
@@ -14,6 +14,8 @@ body{
 
 header{
     grid-column: 1/3;
+    max-width: 597px;
+    width: 434px;
     .home{
         display: flex;
         flex-direction: column;
@@ -65,8 +67,11 @@ header{
 }
 
 main{
-    grid-column: 3/9;
+    display: grid;
+    grid-column: 3/11;
+    grid-template-columns: 2fr 1fr;
     .portade{
+        grid-column: 1/9;
         background-image: url(https://www.excelsiorcalifornia.com/wp-content/uploads/migration/2011/201101/lfe6b7-lfe6aypanda3.jpg?w=879);
         background-size: cover; 
         background-position: center 4%; 
@@ -79,15 +84,27 @@ main{
         gap: 80px;
     }
     .content{
+        grid-column: 1/9;
         background: linear-gradient( rgb(5 124 136) 0%, $gray 8%,);
         padding: 20px;
         margin: 0  5px 0 5px;
+    }
+    .rigthSide{
+       grid-column: 9/11;
+        grid-row: 1/3;
+        background-color: $gray;
+        padding: 20px;
+        margin: 10px  5px 0px 5px;
+        width: 300px;
+        border-radius: $radius $radius;
     }
 }
 
 footer{
     grid-column: 3/9;
     .about{
+        width: 1023px;
+        grid-column: 2/3;
         background-color:  $gray;
         padding: 20px;
         margin: 0  5px 0 5px;
@@ -115,7 +132,7 @@ footer{
         }
     }
     .reproductionBar{
-        
+        background-color: black;
     }
 
   }
