--- a/ASSETS/Sass/main.css
+++ b/ASSETS/Sass/main.css
@@ -16,6 +16,8 @@ body {
 
 header {
   grid-column: 1/3;
+  max-width: 597px;
+  width: 434px;
 }
 header .home {
   display: flex;
@@ -64,9 +66,12 @@ header .playlist {
 }
 
 main {
-  grid-column: 3/9;
+  display: grid;
+  grid-column: 3/11;
+  grid-template-columns: 2fr 1fr;
 }
 main .portade {
+  grid-column: 1/9;
   background-image: url(https://www.excelsiorcalifornia.com/wp-content/uploads/migration/2011/201101/lfe6b7-lfe6aypanda3.jpg?w=879);
   background-size: cover;
   background-position: center 4%;
@@ -79,15 +84,27 @@ main .portade {
   gap: 80px;
 }
 main .content {
+  grid-column: 1/9;
   background: linear-gradient(rgb(5, 124, 136) 0%, #0f0f0f 8%);
   padding: 20px;
   margin: 0 5px 0 5px;
+}
+main .rigthSide {
+  grid-column: 9/11;
+  grid-row: 1/3;
+  background-color: #0f0f0f;
+  padding: 20px;
+  margin: 10px 5px 0px 5px;
+  width: 300px;
+  border-radius: 10px 10px;
 }
 
 footer {
   grid-column: 3/9;
 }
 footer .about {
+  width: 1023px;
+  grid-column: 2/3;
   background-color: #0f0f0f;
   padding: 20px;
   margin: 0 5px 0 5px;
@@ -114,6 +131,10 @@ footer .about .lastLinks {
   font-size: 0.8rem;
   height: 100px;
 }
+footer .reproductionBar {
+  background-color: black;
+}
+
 header .nav a {
   display: inline-block;
   color: #c0c0c0;
@@ -552,6 +573,8 @@ main .discografy .discografy__options .discografy__button--albums {
 main .discografy .discografy__popular {
   display: flex;
   overflow: hidden;
+  justify-content: center;
+  gap: 7px;
 }
 main .discografy .discografy__popular .popular {
   display: flex;
@@ -562,11 +585,12 @@ main .discografy .discografy__popular .popular figure {
   display: flex;
   flex-direction: column;
   margin: 5px;
+  width: 180px;
 }
 main .discografy .discografy__popular .popular figure img {
   position: relative;
-  width: 195px;
-  height: 195px;
+  width: 180px;
+  height: 180px;
   border-radius: 10px;
   z-index: 1;
   margin: 0 auto;
@@ -599,8 +623,8 @@ main .discografy .discografy__popular .popular figure figcaption {
   text-overflow: ellipsis;
 }
 main .discografy .discografy__popular .popular p {
+  width: 180px;
   margin-top: 5px;
-  max-width: 195px;
   max-height: 33px;
   font-size: 0.8rem;
   padding-left: 10px;
@@ -611,6 +635,8 @@ main .discografy .discografy__popular .popular p {
 main .discografy .discografy__albums {
   display: flex;
   overflow: hidden;
+  justify-content: center;
+  gap: 7px;
 }
 main .discografy .discografy__albums .albums {
   display: flex;
@@ -621,11 +647,12 @@ main .discografy .discografy__albums .albums figure {
   display: flex;
   flex-direction: column;
   margin: 5px;
+  width: 180px;
 }
 main .discografy .discografy__albums .albums figure img {
   position: relative;
-  width: 195px;
-  height: 195px;
+  width: 180px;
+  height: 180px;
   border-radius: 10px;
   z-index: 1;
   margin: 0 auto;
@@ -658,8 +685,8 @@ main .discografy .discografy__albums .albums figure figcaption {
   text-overflow: ellipsis;
 }
 main .discografy .discografy__albums .albums p {
+  width: 180px;
   margin-top: 5px;
-  max-width: 195px;
   max-height: 33px;
   font-size: 0.8rem;
   padding-left: 10px;
@@ -690,6 +717,8 @@ main .withPxndx .withPxndx__buttons a:last-of-type {
 main .withPxndx .withPxndx__collabs {
   display: flex;
   overflow: hidden;
+  justify-content: center;
+  gap: 7px;
 }
 main .withPxndx .withPxndx__collabs .collab {
   display: flex;
@@ -700,11 +729,12 @@ main .withPxndx .withPxndx__collabs .collab figure {
   display: flex;
   flex-direction: column;
   margin: 5px;
+  width: 180px;
 }
 main .withPxndx .withPxndx__collabs .collab figure img {
   position: relative;
-  width: 195px;
-  height: 195px;
+  width: 180px;
+  height: 180px;
   border-radius: 10px;
   z-index: 1;
   margin: 0 auto;
@@ -737,14 +767,20 @@ main .withPxndx .withPxndx__collabs .collab figure figcaption {
   text-overflow: ellipsis;
 }
 main .withPxndx .withPxndx__collabs .collab p {
+  width: 180px;
   margin-top: 5px;
-  max-width: 195px;
   max-height: 33px;
   font-size: 0.8rem;
   padding-left: 10px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+main .withPxndx .withPxndx__collabs .collab figure {
+  width: 180px;
+}
+main .withPxndx .withPxndx__collabs .collab p {
+  width: 180px;
 }
 main .fansLikes .fansLikes__buttons {
   display: flex;
@@ -769,6 +805,8 @@ main .fansLikes .fansLikes__buttons a:last-of-type {
 main .fansLikes .fansLikes__artist {
   display: flex;
   overflow: hidden;
+  justify-content: center;
+  gap: 7px;
 }
 main .fansLikes .fansLikes__artist .artist {
   display: flex;
@@ -779,11 +817,12 @@ main .fansLikes .fansLikes__artist .artist figure {
   display: flex;
   flex-direction: column;
   margin: 5px;
+  width: 180px;
 }
 main .fansLikes .fansLikes__artist .artist figure img {
   position: relative;
-  width: 195px;
-  height: 195px;
+  width: 180px;
+  height: 180px;
   border-radius: 10px;
   z-index: 1;
   margin: 0 auto;
@@ -816,8 +855,8 @@ main .fansLikes .fansLikes__artist .artist figure figcaption {
   text-overflow: ellipsis;
 }
 main .fansLikes .fansLikes__artist .artist p {
+  width: 180px;
   margin-top: 5px;
-  max-width: 195px;
   max-height: 33px;
   font-size: 0.8rem;
   padding-left: 10px;
@@ -851,6 +890,8 @@ main .displayon .displayon__buttons a:last-of-type {
 main .displayon .displayon__others {
   display: flex;
   overflow: hidden;
+  justify-content: center;
+  gap: 7px;
 }
 main .displayon .displayon__others .other {
   display: flex;
@@ -861,11 +902,12 @@ main .displayon .displayon__others .other figure {
   display: flex;
   flex-direction: column;
   margin: 5px;
+  width: 180px;
 }
 main .displayon .displayon__others .other figure img {
   position: relative;
-  width: 195px;
-  height: 195px;
+  width: 180px;
+  height: 180px;
   border-radius: 10px;
   z-index: 1;
   margin: 0 auto;
@@ -898,8 +940,8 @@ main .displayon .displayon__others .other figure figcaption {
   text-overflow: ellipsis;
 }
 main .displayon .displayon__others .other p {
+  width: 180px;
   margin-top: 5px;
-  max-width: 195px;
   max-height: 33px;
   font-size: 0.8rem;
   padding-left: 10px;
@@ -936,6 +978,8 @@ main .playlist .playlist__buttons a:last-child {
 main .playlist .playlist__song {
   display: flex;
   overflow: hidden;
+  justify-content: flex-start;
+  gap: 7px;
 }
 main .playlist .playlist__song .song {
   display: flex;
@@ -946,11 +990,12 @@ main .playlist .playlist__song .song figure {
   display: flex;
   flex-direction: column;
   margin: 5px;
+  width: 180px;
 }
 main .playlist .playlist__song .song figure img {
   position: relative;
-  width: 195px;
-  height: 195px;
+  width: 180px;
+  height: 180px;
   border-radius: 10px;
   z-index: 1;
   margin: 0 auto;
@@ -983,8 +1028,8 @@ main .playlist .playlist__song .song figure figcaption {
   text-overflow: ellipsis;
 }
 main .playlist .playlist__song .song p {
+  width: 180px;
   margin-top: 5px;
-  max-width: 195px;
   max-height: 33px;
   font-size: 0.8rem;
   padding-left: 10px;
@@ -1018,6 +1063,8 @@ main .findOn .findOn__buttons a:last-child {
 main .findOn .findOn__albums {
   display: flex;
   overflow: hidden;
+  justify-content: center;
+  gap: 7px;
 }
 main .findOn .findOn__albums .album {
   display: flex;
@@ -1028,11 +1075,12 @@ main .findOn .findOn__albums .album figure {
   display: flex;
   flex-direction: column;
   margin: 5px;
+  width: 180px;
 }
 main .findOn .findOn__albums .album figure img {
   position: relative;
-  width: 195px;
-  height: 195px;
+  width: 180px;
+  height: 180px;
   border-radius: 10px;
   z-index: 1;
   margin: 0 auto;
@@ -1065,8 +1113,8 @@ main .findOn .findOn__albums .album figure figcaption {
   text-overflow: ellipsis;
 }
 main .findOn .findOn__albums .album p {
+  width: 180px;
   margin-top: 5px;
-  max-width: 195px;
   max-height: 33px;
   font-size: 0.8rem;
   padding-left: 10px;
