--- a/Sass/_components.scss
+++ b/Sass/_components.scss
@@ -533,7 +533,7 @@ main{
             
         }
     }
-    aside{
+    .rigthSide{
         .amentesSunt{
             display: flex;
             flex-direction: column;
@@ -612,6 +612,81 @@ main{
                     left: 5px;
                 }
                }
+        }
+        .about__artist{
+             width: 375px;
+            margin: 20px auto;
+            background-color: #181818;
+            border-radius: 10px;
+            overflow: hidden;
+            .artist__photo{
+                display: flex;
+                justify-content: flex-start;
+                width: 100%;
+                height: 240px;
+                background-image: url(https://www.excelsiorcalifornia.com/wp-content/uploads/migration/2011/201101/lfe6b7-lfe6aypanda3.jpg?w=879);
+                background-size: cover;
+                background-position: center;
+                h2 {
+                    padding: 19px;
+                    margin: 0;
+                    font-size: 16px;
+                    color: #ffffff;
+                    font-weight: bold;
+                    height: 20px;
+                }
+            }
+            .artist__descript {
+                padding: 20px;
+                height: 130px;
+                h3 {
+                    margin: 10px 0;
+                    font-size: 16px;
+                    color: #ffffff;
+                }
+                .artist__ear{
+                    font-size: 16px;
+                    color: #b3b3b3;
+                    margin-bottom: 0;
+                }
+                .artist__text {
+                    font-size: 13px;
+                    color: #b3b3b3;
+                    margin-top: 0;
+                    padding: 0;
+                    text-align: justify;
+                    word-spacing: -2px;
+                    position: relative;
+                    bottom: 13px;
+                    height: 45px;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    line-clamp:auto;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    
+                }
+                button {
+                    position: relative;
+                    left: 224px;
+                    bottom: 25px;
+                    display: inline-block;
+                    padding: 7px 14px;
+                    background-color: #333;
+                    color: #ffffff;
+                    border: none;
+                    border-radius: 20px;
+                    cursor: pointer;
+                    font-size: 14px;
+                    margin: 0;
+                
+                }
+                .button:hover {
+                    background-color: #444;
+                }
+            }
+            
         }
     }
 }
