--- a/Sass/_components.scss
+++ b/Sass/_components.scss
@@ -395,6 +395,7 @@ main{
         }
     }
     .discografy{
+        margin: 20px auto 20px auto ;
         .discografy__buttons{
             @include titleButtons;
         }
@@ -420,7 +421,7 @@ main{
             display: flex;
             overflow: hidden;
             justify-content: center;
-            gap: 7px;
+            gap: 0px;
             .popular{
                 @include discografy;
             }
@@ -429,7 +430,7 @@ main{
             display: flex;
             overflow: hidden;
             justify-content: center;
-            gap: 7px;
+            gap: 0px;
             .albums{
                 @include discografy;
             }
@@ -437,6 +438,7 @@ main{
         }
     }
     .withPxndx{
+        margin: 30px auto 30px auto;
         .withPxndx__buttons{
        @include titleButtons;
         }
@@ -459,6 +461,7 @@ main{
     }
 
     .fansLikes{
+        margin: 30px auto 30px auto;
         .fansLikes__buttons{
             @include titleButtons;
         }
@@ -476,6 +479,7 @@ main{
         }
     }
     .displayon{
+        margin: 30px auto 30px auto;
         .displayon__buttons{
             @include titleButtons;
         }
@@ -495,6 +499,7 @@ main{
     }
 
     .playlist{
+        margin: 30px auto 30px auto;
         .playlist__buttons{
             @include titleButtons;
             a:last-child{
@@ -513,6 +518,7 @@ main{
         }
     }
     .findOn{
+        margin: 30px auto 30px auto;
         .findOn__buttons{
             @include titleButtons;
             a:last-child{
@@ -534,41 +540,42 @@ main{
         }
     }
     .rigthSide{
+        .amentes__Song{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            height: 57px;
+            gap: 225px;
+            margin: 0px;
+            width: 380px;
+            position: relative;
+           .actualSong__buttons{
+                @include titleButtons;
+                &:first-child{
+                    .button__title{
+                        font-size: 1rem;
+                        font-weight: bold;
+                }
+                }
+                &:last-child{
+                    display: flex;
+                    flex-direction: row;
+                    gap: 20px;
+                    img {
+                        scale: .8;
+                        cursor: pointer;
+                    }
+                }
+            
+           }
+        }
         .amentesSunt{
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
             position: relative;
-            .amentes__Song{
-                display: flex;
-                flex-direction: row;
-                justify-content: space-around;
-                height: 57px;
-                gap: 225px;
-                margin: 0px;
-                width: 405px;
-                position: relative;
-               .actualSong__buttons{
-                    @include titleButtons;
-                    &:first-child{
-                        .button__title{
-                            font-size: 1rem;
-                            font-weight: bold;
-                    }
-                    }
-                    &:last-child{
-                        display: flex;
-                        flex-direction: row;
-                        gap: 20px;
-                        img {
-                            scale: .8;
-                            cursor: pointer;
-                        }
-                    }
-                
-               }
-            }
+            
             .amentes__img{
                 display: flex;
                 flex-direction: column;
@@ -614,7 +621,7 @@ main{
                }
         }
         .about__artist{
-             width: 375px;
+            width: 375px;
             margin: 20px auto;
             background-color: #181818;
             border-radius: 10px;
@@ -651,6 +658,7 @@ main{
                 }
                 .artist__text {
                     font-size: 13px;
+                    line-height: 17px;
                     color: #b3b3b3;
                     margin-top: 0;
                     padding: 0;
@@ -658,7 +666,7 @@ main{
                     word-spacing: -2px;
                     position: relative;
                     bottom: 13px;
-                    height: 45px;
+                    height: 50px;
                     display: -webkit-box;
                     -webkit-line-clamp: 3;
                     line-clamp:auto;
@@ -673,13 +681,15 @@ main{
                     bottom: 25px;
                     display: inline-block;
                     padding: 7px 14px;
-                    background-color: #333;
                     color: #ffffff;
-                    border: none;
                     border-radius: 20px;
                     cursor: pointer;
                     font-size: 14px;
                     margin: 0;
+                    height: 30px;
+                    background-color: transparent;
+                    border: 1px solid #464646;
+                    font-weight: bold;
                 
                 }
                 .button:hover {
@@ -687,6 +697,153 @@ main{
                 }
             }
             
+        }
+        .credits{
+            width: 375px;
+            margin: 20px auto;
+            background-color: #181818;
+            border-radius: 10px;
+            overflow: hidden;
+            .credits__title{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                flex-wrap: nowrap;
+                h3{
+                    color: $whiteLight;
+                    padding-left: 25px;
+                    font-size: 1.1rem;
+                }
+                a{
+                    color: $whiteLight;
+                    text-decoration: none;
+                    padding-right: 25px;
+                    font-size: 1rem;
+                }
+            }
+            .credits__band{
+                display: flex;
+                flex-direction: row;
+                color: $whiteLight;
+                justify-content: space-around;
+                align-items: center;
+                gap: 50px;
+                h3{
+                    margin-bottom: 5px;
+                }
+                p{
+                    margin-top: 5px;
+                }
+                button {
+                    position: relative;
+                    display: inline-block;
+                    padding: 7px 14px;
+                    color: #ffffff;
+                    border-radius: 20px;
+                    cursor: pointer;
+                    font-size: 14px;
+                    margin: 0;
+                    height: 30px;
+                    background-color: transparent;
+                    border: 1px solid #464646;
+                    font-weight: bold;
+                }
+                .button:hover {
+                    scale: 1.2;
+                }
+            }
+        }
+        .articlesPromotion{
+            @include promotion;
+            width: 335px;
+            height: auto;
+            margin: 20px auto;
+            background-color: #181818;
+            border-radius: 10px;
+            overflow: hidden;
+            padding: 20px;
+            h5{
+                margin: 0px;
+                font-size: 1.1rem;
+                color: $whiteLight;
+            }
+            div{
+            overflow: hidden;
+            .promotion__text{
+                width: 230px;
+                text-overflow: ellipsis;
+                font-weight: normal;
+            }
+            }
+        }
+
+        .next{
+            @include promotion;
+            width: 335px;
+            height: auto;
+            margin: 20px auto;
+            background-color: #181818;
+            border-radius: 10px;
+            overflow: hidden;
+            padding: 20px;
+            .next__title{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                align-items: center;
+                gap: 10px;
+                text-wrap: nowrap;
+                color: $whiteLight;
+                gap: 20px;
+                h3{
+                    font-size: 15px;
+                }
+                a{
+                    color: $whiteLight;
+                    font-size: 14px;
+                    text-decoration: none;
+                }
+            }
+            .next__song{
+                width: 340px;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                gap: 10px;
+                img{
+                    width: 55px;
+                    height: 55px;
+                    border-radius: 5px3px;
+                }
+                div{
+                    gap: 15px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    justify-content: center;
+                    gap: 5px;
+                    h4{
+                        margin: 0;
+                        color: $whiteLight;
+                    }
+                    p{
+                        margin: 0;
+                    }
+                }
+                .next__link{
+                    display: flex;
+                    display: flex;
+                    width: 70px;
+                    justify-content: flex-end;
+                    align-items: flex-start;
+                    img{
+                        width: 25px;
+                        
+                    }
+                }
+                
+            }
         }
     }
 }
@@ -742,38 +899,7 @@ footer{
                 color: $whiteLight;
             }
             .articlesPromotion__content{
-                display: flex;
-                flex-direction: column;
-                justify-content: flex-start;
-                height: 240px;
-                gap: 20px;
-                .promotion{
-                    gap: 15px;
-                    @include artist-album(square);
-                    img{
-                        border-radius: 2px;
-                    }
-                   h4{
-                    margin: 0;
-                    color: $whiteLight;
-                    width: 450px;
-                    overflow: hidden;
-                    white-space: nowrap;
-                    text-overflow: ellipsis;
-                   }
-                   p{
-                    font-size: .9rem;
-                    width: 450px;
-                    overflow: hidden;
-                    white-space: nowrap;
-                    text-overflow: ellipsis;
-                   }
-                   .promotion__link{
-                    width: 20px;
-                    position: relative;
-                    bottom: 13px;
-                    right: 10px;
-                   }
+                @include promotion;
                 }
             }
         }
@@ -842,10 +968,10 @@ footer{
                 @include footerLastLinks;
             }
             .copyright {
-                margin-left: 170px;
+                margin-left: 160px;
             }
         }
 
     }
-}
+
 
