--- a/Sass/main.css
+++ b/Sass/main.css
@@ -535,6 +535,9 @@ main .see .see__less {
   background-color: transparent;
   border: none;
 }
+main .discografy {
+  margin: 20px auto 20px auto;
+}
 main .discografy .discografy__buttons {
   display: flex;
   flex-direction: row;
@@ -577,17 +580,18 @@ main .discografy .discografy__popular {
   display: flex;
   overflow: hidden;
   justify-content: center;
-  gap: 7px;
+  gap: 0px;
 }
 main .discografy .discografy__popular .popular {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  align-items: center;
+  margin: 0px;
 }
 main .discografy .discografy__popular .popular figure {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  margin: 0px;
   width: 180px;
 }
 main .discografy .discografy__popular .popular figure img {
@@ -639,17 +643,18 @@ main .discografy .discografy__albums {
   display: flex;
   overflow: hidden;
   justify-content: center;
-  gap: 7px;
+  gap: 0px;
 }
 main .discografy .discografy__albums .albums {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  align-items: center;
+  margin: 0px;
 }
 main .discografy .discografy__albums .albums figure {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  margin: 0px;
   width: 180px;
 }
 main .discografy .discografy__albums .albums figure img {
@@ -697,6 +702,9 @@ main .discografy .discografy__albums .albums p {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+main .withPxndx {
+  margin: 30px auto 30px auto;
+}
 main .withPxndx .withPxndx__buttons {
   display: flex;
   flex-direction: row;
@@ -726,12 +734,13 @@ main .withPxndx .withPxndx__collabs {
 main .withPxndx .withPxndx__collabs .collab {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  align-items: center;
+  margin: 0px;
 }
 main .withPxndx .withPxndx__collabs .collab figure {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  margin: 0px;
   width: 180px;
 }
 main .withPxndx .withPxndx__collabs .collab figure img {
@@ -785,6 +794,9 @@ main .withPxndx .withPxndx__collabs .collab figure {
 main .withPxndx .withPxndx__collabs .collab p {
   width: 180px;
 }
+main .fansLikes {
+  margin: 30px auto 30px auto;
+}
 main .fansLikes .fansLikes__buttons {
   display: flex;
   flex-direction: row;
@@ -814,12 +826,13 @@ main .fansLikes .fansLikes__artist {
 main .fansLikes .fansLikes__artist .artist {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  align-items: center;
+  margin: 0px;
 }
 main .fansLikes .fansLikes__artist .artist figure {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  margin: 0px;
   width: 180px;
 }
 main .fansLikes .fansLikes__artist .artist figure img {
@@ -870,6 +883,9 @@ main .fansLikes .fansLikes__artist .artist p {
 main .fansLikes .fansLikes__artist .artist img:first-of-type {
   border-radius: 50%;
 }
+main .displayon {
+  margin: 30px auto 30px auto;
+}
 main .displayon .displayon__buttons {
   display: flex;
   flex-direction: row;
@@ -899,12 +915,13 @@ main .displayon .displayon__others {
 main .displayon .displayon__others .other {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  align-items: center;
+  margin: 0px;
 }
 main .displayon .displayon__others .other figure {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  margin: 0px;
   width: 180px;
 }
 main .displayon .displayon__others .other figure img {
@@ -955,6 +972,9 @@ main .displayon .displayon__others .other p {
 main .displayon .displayon__others .other .other_caption {
   text-transform: capitalize;
 }
+main .playlist {
+  margin: 30px auto 30px auto;
+}
 main .playlist .playlist__buttons {
   display: flex;
   flex-direction: row;
@@ -987,12 +1007,13 @@ main .playlist .playlist__song {
 main .playlist .playlist__song .song {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  align-items: center;
+  margin: 0px;
 }
 main .playlist .playlist__song .song figure {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  margin: 0px;
   width: 180px;
 }
 main .playlist .playlist__song .song figure img {
@@ -1040,6 +1061,9 @@ main .playlist .playlist__song .song p {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+main .findOn {
+  margin: 30px auto 30px auto;
+}
 main .findOn .findOn__buttons {
   display: flex;
   flex-direction: row;
@@ -1072,12 +1096,13 @@ main .findOn .findOn__albums {
 main .findOn .findOn__albums .album {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  align-items: center;
+  margin: 0px;
 }
 main .findOn .findOn__albums .album figure {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  margin: 0px;
   width: 180px;
 }
 main .findOn .findOn__albums .album figure img {
@@ -1128,55 +1153,55 @@ main .findOn .findOn__albums .album p {
 main .findOn .findOn__albums .album .other_caption {
   text-transform: capitalize;
 }
-main .rigthSide .amentesSunt {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  position: relative;
-}
-main .rigthSide .amentesSunt .amentes__Song {
+main .rigthSide .amentes__Song {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   height: 57px;
   gap: 225px;
   margin: 0px;
-  width: 405px;
+  width: 380px;
   position: relative;
 }
-main .rigthSide .amentesSunt .amentes__Song .actualSong__buttons {
+main .rigthSide .amentes__Song .actualSong__buttons {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
-main .rigthSide .amentesSunt .amentes__Song .actualSong__buttons a:first-of-type {
+main .rigthSide .amentes__Song .actualSong__buttons a:first-of-type {
   color: #fff;
   text-decoration: none;
   font-size: 22px;
 }
-main .rigthSide .amentesSunt .amentes__Song .actualSong__buttons a:first-of-type h4 {
+main .rigthSide .amentes__Song .actualSong__buttons a:first-of-type h4 {
   margin-bottom: 15px;
 }
-main .rigthSide .amentesSunt .amentes__Song .actualSong__buttons a:last-of-type {
+main .rigthSide .amentes__Song .actualSong__buttons a:last-of-type {
   color: #c0c0c0;
   opacity: 0.8;
   text-decoration: none;
   font-size: 14px;
 }
-main .rigthSide .amentesSunt .amentes__Song .actualSong__buttons:first-child .button__title {
+main .rigthSide .amentes__Song .actualSong__buttons:first-child .button__title {
   font-size: 1rem;
   font-weight: bold;
 }
-main .rigthSide .amentesSunt .amentes__Song .actualSong__buttons:last-child {
+main .rigthSide .amentes__Song .actualSong__buttons:last-child {
   display: flex;
   flex-direction: row;
   gap: 20px;
 }
-main .rigthSide .amentesSunt .amentes__Song .actualSong__buttons:last-child img {
+main .rigthSide .amentes__Song .actualSong__buttons:last-child img {
   scale: 0.8;
   cursor: pointer;
+}
+main .rigthSide .amentesSunt {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
 }
 main .rigthSide .amentesSunt .amentes__img {
   display: flex;
@@ -1260,6 +1285,7 @@ main .rigthSide .about__artist .artist__descript .artist__ear {
 }
 main .rigthSide .about__artist .artist__descript .artist__text {
   font-size: 13px;
+  line-height: 17px;
   color: #b3b3b3;
   margin-top: 0;
   padding: 0;
@@ -1267,7 +1293,7 @@ main .rigthSide .about__artist .artist__descript .artist__text {
   word-spacing: -2px;
   position: relative;
   bottom: 13px;
-  height: 45px;
+  height: 50px;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   line-clamp: auto;
@@ -1281,16 +1307,250 @@ main .rigthSide .about__artist .artist__descript button {
   bottom: 25px;
   display: inline-block;
   padding: 7px 14px;
-  background-color: #333;
   color: #ffffff;
-  border: none;
   border-radius: 20px;
   cursor: pointer;
   font-size: 14px;
   margin: 0;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid #464646;
+  font-weight: bold;
 }
 main .rigthSide .about__artist .artist__descript .button:hover {
   background-color: #444;
+}
+main .rigthSide .credits {
+  width: 375px;
+  margin: 20px auto;
+  background-color: #181818;
+  border-radius: 10px;
+  overflow: hidden;
+}
+main .rigthSide .credits .credits__title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+main .rigthSide .credits .credits__title h3 {
+  color: #fff;
+  padding-left: 25px;
+  font-size: 1.1rem;
+}
+main .rigthSide .credits .credits__title a {
+  color: #fff;
+  text-decoration: none;
+  padding-right: 25px;
+  font-size: 1rem;
+}
+main .rigthSide .credits .credits__band {
+  display: flex;
+  flex-direction: row;
+  color: #fff;
+  justify-content: space-around;
+  align-items: center;
+  gap: 50px;
+}
+main .rigthSide .credits .credits__band h3 {
+  margin-bottom: 5px;
+}
+main .rigthSide .credits .credits__band p {
+  margin-top: 5px;
+}
+main .rigthSide .credits .credits__band button {
+  position: relative;
+  display: inline-block;
+  padding: 7px 14px;
+  color: #ffffff;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 14px;
+  margin: 0;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid #464646;
+  font-weight: bold;
+}
+main .rigthSide .credits .credits__band .button:hover {
+  scale: 1.2;
+}
+main .rigthSide .articlesPromotion {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 240px;
+  gap: 20px;
+  width: 335px;
+  height: auto;
+  margin: 20px auto;
+  background-color: #181818;
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 20px;
+}
+main .rigthSide .articlesPromotion .promotion {
+  gap: 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+main .rigthSide .articlesPromotion .promotion img {
+  width: 55px;
+  border-radius: 10px;
+}
+main .rigthSide .articlesPromotion .promotion h4, main .rigthSide .articlesPromotion .promotion p {
+  padding-top: 5px;
+}
+main .rigthSide .articlesPromotion .promotion p {
+  margin: 5px 0 0 0;
+}
+main .rigthSide .articlesPromotion .promotion img {
+  border-radius: 2px;
+}
+main .rigthSide .articlesPromotion .promotion h4 {
+  margin: 0;
+  color: #fff;
+  width: 450px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+main .rigthSide .articlesPromotion .promotion p {
+  font-size: 0.9rem;
+  width: 450px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+main .rigthSide .articlesPromotion .promotion .promotion__link {
+  width: 20px;
+  position: relative;
+  bottom: 13px;
+  right: 10px;
+}
+main .rigthSide .articlesPromotion h5 {
+  margin: 0px;
+  font-size: 1.1rem;
+  color: #fff;
+}
+main .rigthSide .articlesPromotion div {
+  overflow: hidden;
+}
+main .rigthSide .articlesPromotion div .promotion__text {
+  width: 230px;
+  text-overflow: ellipsis;
+  font-weight: normal;
+}
+main .rigthSide .next {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 240px;
+  gap: 20px;
+  width: 335px;
+  height: auto;
+  margin: 20px auto;
+  background-color: #181818;
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 20px;
+}
+main .rigthSide .next .promotion {
+  gap: 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+main .rigthSide .next .promotion img {
+  width: 55px;
+  border-radius: 10px;
+}
+main .rigthSide .next .promotion h4, main .rigthSide .next .promotion p {
+  padding-top: 5px;
+}
+main .rigthSide .next .promotion p {
+  margin: 5px 0 0 0;
+}
+main .rigthSide .next .promotion img {
+  border-radius: 2px;
+}
+main .rigthSide .next .promotion h4 {
+  margin: 0;
+  color: #fff;
+  width: 450px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+main .rigthSide .next .promotion p {
+  font-size: 0.9rem;
+  width: 450px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+main .rigthSide .next .promotion .promotion__link {
+  width: 20px;
+  position: relative;
+  bottom: 13px;
+  right: 10px;
+}
+main .rigthSide .next .next__title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  gap: 10px;
+  text-wrap: nowrap;
+  color: #fff;
+  gap: 20px;
+}
+main .rigthSide .next .next__title h3 {
+  font-size: 15px;
+}
+main .rigthSide .next .next__title a {
+  color: #fff;
+  font-size: 14px;
+  text-decoration: none;
+}
+main .rigthSide .next .next__song {
+  width: 340px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 10px;
+}
+main .rigthSide .next .next__song img {
+  width: 55px;
+  height: 55px;
+  border-radius: 5px3px;
+}
+main .rigthSide .next .next__song div {
+  gap: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 5px;
+}
+main .rigthSide .next .next__song div h4 {
+  margin: 0;
+  color: #fff;
+}
+main .rigthSide .next .next__song div p {
+  margin: 0;
+}
+main .rigthSide .next .next__song .next__link {
+  display: flex;
+  display: flex;
+  width: 70px;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+main .rigthSide .next .next__song .next__link img {
+  width: 25px;
 }
 
 footer .about .about__portade .about__title {
@@ -1387,11 +1647,11 @@ footer .about .articlesPromotion .articlesPromotion__content .promotion .promoti
   bottom: 13px;
   right: 10px;
 }
-footer .about .aboutLinks h2 {
+footer .aboutLinks h2 {
   color: #fff;
   font-size: 1rem;
 }
-footer .about .aboutLinks ul {
+footer .aboutLinks ul {
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -1399,29 +1659,29 @@ footer .about .aboutLinks ul {
   padding: 0;
   justify-content: flex-start;
 }
-footer .about .aboutLinks a {
+footer .aboutLinks a {
   color: #c0c0c0;
   text-decoration: none;
   text-wrap: wrap;
 }
-footer .about .aboutLinks a i {
+footer .aboutLinks a i {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-footer .about .aboutLinks a img {
+footer .aboutLinks a img {
   width: 20px;
 }
-footer .about .aboutLinks a:hover {
+footer .aboutLinks a:hover {
   text-decoration: underline;
   color: #fff;
 }
-footer .about .aboutLinks .social__media {
+footer .aboutLinks .social__media {
   margin-top: 20px;
   display: flex;
   gap: 10px;
 }
-footer .about .aboutLinks .social__media a {
+footer .aboutLinks .social__media a {
   display: flex;
   width: 30px;
   height: 30px;
@@ -1435,28 +1695,28 @@ footer .about .aboutLinks .social__media a {
   align-items: center;
   padding: 3px;
 }
-footer .about .aboutLinks .social__media a:hover {
+footer .aboutLinks .social__media a:hover {
   background-color: #686868;
 }
-footer .about .lastLinks .footer__links {
+footer .lastLinks .footer__links {
   display: flex;
   justify-content: center;
   list-style: none;
   margin: 0;
   padding: 0;
 }
-footer .about .lastLinks .footer__links li {
+footer .lastLinks .footer__links li {
   margin: 0 10px;
 }
-footer .about .lastLinks .footer__links a {
+footer .lastLinks .footer__links a {
   color: #b3b3b3;
   text-decoration: none;
 }
-footer .about .lastLinks .footer__links a:hover {
+footer .lastLinks .footer__links a:hover {
   text-decoration: underline;
   text-decoration: none;
   color: #fff;
 }
-footer .about .lastLinks .copyright {
-  margin-left: 170px;
+footer .lastLinks .copyright {
+  margin-left: 160px;
 }/*# sourceMappingURL=main.css.map */
